      (John Arbash Meinel)

    * ``SFTPTransport.readv()`` was accidentally using ``list += string``,
      which 'works', but adds each character separately to the list,
      rather than using ``list.append(string)``. Fixing this makes the
      SFTP transport a little bit faster (~20%) and use a bit less memory.
      (John Arbash Meinel)

    * When reading index files, if we happen to read the whole file in a
      single request treat it as a ``_buffer_all`` request. This happens
      most often on small indexes over remote transports, where we default
      to reading 64kB. It saves a round trip for each small index during
      fetch operations. Also, if we have read more than 50% of an index
      file, trigger a ``_buffer_all`` on the next request. This works
      around some inefficiencies because reads don't fall neatly on page
      boundaries, so we would ignore those bytes, but request them again
      later. This could trigger a total read size of more than the whole
      file. (John Arbash Meinel)

  BUG FIXES:

    * ``bzr rm`` is now aliased to ``bzr del`` for the convenience of svn
      users. (Robert Collins, #205416)

    * Catch the infamous "select/poll returned error" which occurs when
      pycurl try to send a body request to an HTTP/1.0 server which has
      already refused to handle the request. (Vincent Ladeuil, #225020)

    * Fix ``ObjectNotLocked`` errors when using various commands
      (including ``bzr cat`` and ``bzr annotate``) in combination with a
      smart server URL.  (Andrew Bennetts, #237067)

    * ``FTPTransport.stat()`` would return ``0000`` as the permission bits
      for the containing ``.bzr/`` directory (it does not implement
      permissions). This would cause us to set all subdirectories to
      ``0700`` and files to ``0600`` rather than leaving them unmodified.
      Now we ignore ``0000`` as the permissions and assume they are
      invalid. (John Arbash Meinel, #259855)
